<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Passwordr</string>

    <!-- Strings related to login -->
    <string name="facebook_app_id">160672534565859</string>
    <string name="fb_login_protocol_scheme">fb160672534565859</string>
    <string name="twitter_consumer_key">qOo4ciqORozZ1SzsdZjVaUWXh</string>
    <string name="twitter_consumer_secret">UpXx4wZvggAEcG1lUF09lndCdWKNBzcDAnzVCMl2RV2pVMfX9I</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_password_list">Passwords</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="facebook_sign_in">Sign in with Facebook</string>
    <string name="twitter_sign_in">Sign in with Twitter</string>
    <string name="github_sign_in">Sign in with Github</string>
    <string name="format_name">Name: <xliff:g id="name">%1$s</xliff:g></string>
    <string name="format_url">URL: <xliff:g id="url">%1$s</xliff:g></string>
    <string name="format_password">Password: <xliff:g id="password">%1$s</xliff:g></string>
    <string name="format_note">Note: <xliff:g id="note">%1$s</xliff:g></string>
    <string name="name_label">Name: </string>
    <string name="url_label">URL: </string>
    <string name="password_label">Password: </string>
    <string name="note_label">Note: </string>
    <string name="show">Show</string>
    <string name="edit">Edit</string>
    <string name="note">Note:</string>
    <string name="note_without_colon">Note</string>
    <string name="done">DONE</string>
    <string name="title_activity_new_password">New Password</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm</string>
    <string name="generate">Generate</string>
    <string name="passwords">Passwords</string>
    <string name="delete">Delete</string>
    <string name="title_activity_confirm_delete_password">Delete Password?</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="change_master_password">Change master password</string>
    <string name="import_export">Import/Export</string>
    <string name="delete_password">Delete password?</string>
    <string name="go">Go</string>
    <string name="xml">XML</string>
    <string name="json">JSON</string>
    <string name="import_str">Import</string>
    <string name="export">Export</string>
    <string name="settings">Settings</string>
    <string name="enable_pwned_npasswords_check">Enable Pwned Passwords Check?</string>
    <string name="do_pwned_passwords_check_on_all_passwords">Check All Passwords</string>
    <string name="check">Check</string>
    <string name="copy">Copy</string>
    <string name="facebook_application_id" translatable="false">160672534565859</string>
    <string name="confirm_nnew_nmaster_npassword">Confirm New Master Password:</string>
    <string name="new_master_password">new master password</string>
    <string name="number_of_seconds_to_wait_before_clearing_clipboard">Number of Seconds to Wait Before Clearing Clipboard:</string>
    <string name="enter_master_password">Enter Master Password</string>
    <string name="master_password">master password</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="sort">Sort</string>
    <string name="keepass_xml">KeePass XML</string>
    <string name="sign_out">Sign out</string>
    <string name="github_client_id" translatable="false">eeaa6f8ae988155d4068</string>
    <string name="github_client_secret" translatable="false">950d4bf6cb92315047e9b0da4fc235e8e8928974</string>
    <string name="firebase_web_host" translatable="false">passwordr-3917b.firebaseapp.com</string>
    <string name="last_signed_in">Last signed in:</string>
</resources>
