<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.jtmaher2.passwordr.PasswordList">
    <item
        android:id="@+id/menu_change_master_password"
        android:orderInCategory="100"
        android:title="@string/change_master_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_import_export"
        android:orderInCategory="100"
        android:title="@string/import_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/menu_clear_search"
        android:orderInCategory="100"
        android:title="@string/clear"
        app:showAsAction="ifRoom"/>
</menu>
