<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.jtmaher2.passwordr.ChangeMasterPasswordActivity">

    <TextView
        android:id="@+id/newMasterPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_master_password"
        android:labelFor="@+id/newMasterPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirmNewMasterPasswordLabel"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/confirm_nnew_nmaster_npassword"
        android:labelFor="@+id/confirmNewMasterPasswordEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newMasterPasswordEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newMasterPasswordLabel"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/newMasterPasswordEditText"
        android:layout_width="272dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toEndOf="@+id/newMasterPasswordLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirmNewMasterPasswordEditText"
        android:layout_width="266dp"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="68dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newMasterPasswordLabel" />

    <Button
        android:id="@+id/saveMasterPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="72dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newMasterPasswordEditText"
        app:layout_constraintVertical_bias="0.525" />

    <Button
        android:id="@+id/cancelMasterPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toEndOf="@+id/saveMasterPasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/newMasterPasswordEditText"
        app:layout_constraintVertical_bias="0.502" />
</android.support.constraint.ConstraintLayout>
